Apply new stopStreaming feature of OvenLiveKit

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -141,7 +141,7 @@
                         <a class="nav-link active" href="./demo.html">Test Player</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://space.ovenplayer.com">Demo</a>
+                        <a class="nav-link" href="https://space.ovenplayer.com" target="_blank">Demo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com/AirenSoft/OvenPlayer" target="_blank">GitHub</a>
