--- a/demo/demo.html
+++ b/demo/demo.html
@@ -287,6 +287,17 @@
                         <i class="fas fa-external-link-alt"></i>
                       </a>
                     </div>
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" value="" id="doubleTapToSeek"
+                        v-model="playerOption.doubleTapToSeek" @change="changeOptions" />
+                      <label class="form-check-label" for="doubleTapToSeek">
+                        doubleTapToSeek
+                      </label>
+                      <a href="https://airensoft.gitbook.io/ovenplayer/initialization#doubletaptoseek" class="ms-1"
+                        target="_blank">
+                        <i class="fas fa-external-link-alt"></i>
+                      </a>
+                    </div>
                   </fieldset>
                 </div>
                 <div class="col-lg-4 border-start border-2 mb-3 mb-lg-0">
@@ -594,7 +605,8 @@
       autoStart: true,
       autoFallback: true,
       mute: false,
-      sources: []
+      sources: [],
+      doubleTapToSeek: false
     };
 
     if (urlOption && urlOption.playerOption) {
